[package]
name = "hakuzu"
version = "0.3.0"
edition = "2021"
description = "HA Kuzu/LadybugDB with one line of code. Leader election, journal replication, write forwarding — just your app + an S3 bucket."
authors = ["Russell Romney <russellromney@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/russellromney/hakuzu"
keywords = ["kuzu", "graph-database", "ha", "replication", "leader-election"]
categories = ["database", "network-programming"]

[dependencies]
# HA coordination framework
hadb = { path = "../hadb/hadb", version = "0.3" }
hadb-io = { path = "../hadb/hadb-io", version = "0.3", features = ["s3"] }
hadb-lease-s3 = { path = "../hadb/hadb-lease-s3", version = "0.3" }

# Journal replication
graphstream = { path = "../graphstream", version = "0.3" }

# Kuzu graph database
lbug = { version = "0.14", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# S3
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Utilities
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# HTTP (write forwarding + experiment binaries)
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# CLI + logging (for experiment binaries)
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Snapshot (tar + compression)
tar = "0.4"
zstd = "0.13"
hex = "0.4"

# Hostname
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }

# Temp dirs (for bench binaries)
tempfile = "3"

# Memory allocator — returns freed memory to OS (macOS system allocator doesn't)
mimalloc = { version = "0.1", default-features = false }

[[bin]]
name = "hakuzu-ha-experiment"
path = "src/bin/ha_experiment.rs"

[[bin]]
name = "hakuzu-ha-writer"
path = "src/bin/ha_writer.rs"

[[bin]]
name = "rss-bench"
path = "src/bin/rss_bench.rs"

[[example]]
name = "connection_cost"
path = "bench/connection_cost.rs"

[[example]]
name = "semaphore_tuning"
path = "bench/semaphore_tuning.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
serde_json = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
filetime = "0.2"
hadb-changeset = "0.3"

[patch.crates-io]
lbug = { path = "../ladybug-fork/tools/rust_api" }
